Prevent footer wrapping

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -229,7 +229,6 @@ hr {
 }
 
 footer {
-  width:270px;
   float:left;
   position:fixed;
   bottom:50px;
